--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -1,76 +1,85 @@
 <div id="welcomePage" class="container-fluid">
     <div class="row">
-        <div class="first-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="banner first-banner-container col-md-12 col-lg-10 col-lg-offset-1">
-                <div>
-                    <h4>
-                        <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
-                    </h4>
-                    Has Dreamfactory made a difference in your organization?
-                    Are you doing something novel and interesting with our software?
-                    We’d love to add your story to the Dreamfactory.com user showcase!
-                    E-mail us at <b>info@dreamfactory.com</b> with your project details and we’ll add your organization name, URL, and story to our site!
-                </div>
-            </div>
-        </div>
-        <div class="first-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="banner first-banner-container col-md-12 col-lg-10 col-lg-offset-1">
-                <div>
-                    <h4>
-                        <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;ATTENTION OSS USERS
-                    </h4>
-                    Did you know Dreamfctory’s commercial solutions include connectors for Microsoft SQL Server, Oracle, SOAP-to-REST, API limiting, ELK stack integration, and much more? Contact Us to arrange a demo with our engineering team!
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="row">
         <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
-                <h3>Welcome to DreamFactory!</h3>
-
-                <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
-                <p data-ng-init="resources = [
-                    {name: 'Written Tutorials',         icon: 'file-text',       link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
-                    {name: 'Video Tutorials',           icon: 'video-camera',    link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
-                    {name: 'Full Documentation',        icon: 'book',            link: 'http://wiki.dreamfactory.com/'},
-                    {name: 'Community Forum',           icon: 'comments',        link: 'http://community.dreamfactory.com/'},
-                    {name: 'Bugs and Feature Requests', icon: 'bug',             link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
-                    {name: 'DreamFactory on Twitter',   icon: 'twitter',         link: 'https://twitter.com/dfsoftwareinc'},
-                    {name: 'DreamFactory Blog',         icon: 'pencil-square-o', link: 'http://blog.dreamfactory.com/'},
-                    {name: 'Contact Support',           icon: 'support',         link: 'http://www.dreamfactory.com/support'}
-                ]">
-
-                    <div data-ng-repeat="resource in resources">
-                        <div class="banner outligned resource-link">
-                            <i class="fa fa-{{resource.icon}}" aria-hidden="true"></i>
-                            &nbsp;
-                            <a href="{{resource.link}}" target="_blank">{{resource.name}}</a>
-                        </div>
+            <div class="row">
+                <div class="second-banner-container col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+                    <div class="df-mac-preview">
+                        <a href="https://www.youtube.com/watch?v=vbWls5aqg0A" target="_blank">
+                            <div class="df-mac-preview-overlay blured"></div>
+                            <div class="df-mac-preview-overlay circle">
+                                <i class="fa fa-play" aria-hidden="true"></i>
+                            </div>
+                            <div class="df-mac-preview-overlay text">
+                                <div>Watch Video</div>
+                            </div>
+                        </a>
+                        <img src="/images/macbook-hp-df-1.png">
                     </div>
-                </p>
+                </div>
             </div>
-        </div>
 
-        <div class="second-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
-            <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
-                <div class="df-mac-preview">
-                    <a href="https://www.youtube.com/watch?v=vbWls5aqg0A" target="_blank">
-                        <div class="df-mac-preview-overlay blured"></div>
-                        <div class="df-mac-preview-overlay circle">
-                            <i class="fa fa-play" aria-hidden="true"></i>
+            <div class="bdivider"></div>
+
+            <div class="row">
+                <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
+                    <h3>Welcome to DreamFactory!</h3>
+
+                    <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
+                    <p data-ng-init="resources = [
+                        {name: 'Written Tutorials',         icon: 'file-text',       link: 'http://wiki.dreamfactory.com/DreamFactory/Tutorials'},
+                        {name: 'Video Tutorials',           icon: 'video-camera',    link: 'http://wiki.dreamfactory.com/DreamFactory/Videos'},
+                        {name: 'Full Documentation',        icon: 'book',            link: 'http://wiki.dreamfactory.com/'},
+                        {name: 'Community Forum',           icon: 'comments',        link: 'http://community.dreamfactory.com/'},
+                        {name: 'Bugs and Feature Requests', icon: 'bug',             link: 'https://github.com/dreamfactorysoftware/dreamfactory/issues'},
+                        {name: 'DreamFactory on Twitter',   icon: 'twitter',         link: 'https://twitter.com/dfsoftwareinc'},
+                        {name: 'DreamFactory Blog',         icon: 'pencil-square-o', link: 'http://blog.dreamfactory.com/'},
+                        {name: 'Contact Support',           icon: 'support',         link: 'http://www.dreamfactory.com/support'}
+                    ]">
+
+                        <div data-ng-repeat="resource in resources">
+                            <div class="banner outligned resource-link">
+                                <i class="fa fa-{{resource.icon}}" aria-hidden="true"></i>
+                                &nbsp;
+                                <a href="{{resource.link}}" target="_blank">{{resource.name}}</a>
+                            </div>
                         </div>
-                        <div class="df-mac-preview-overlay text">
-                            <div>Watch Video</div>
-                        </div>
-                    </a>
-                    <img src="/images/macbook-hp-df-1.png">
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
 
+        <div class="first-banner col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0 col-lg-6 col-lg-offset-0">
+            <div class="row">
+                <div class="banner first-banner-container col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+                    <div>
+                        <h4>
+                            <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;ATTENTION OSS USERS
+                        </h4>
+                        Did you know Dreamfctory’s commercial solutions include connectors for Microsoft SQL Server, Oracle, SOAP-to-REST, API limiting, ELK stack integration, and much more? Contact Us to arrange a demo with our engineering team!
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="bdivider"></div>
+
+            <div class="row">
+                <div class="banner first-banner-container col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+                    <div>
+                        <h4>
+                            <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;WE WANT TO HERE FROM YOU! 
+                        </h4>
+                        Has Dreamfactory made a difference in your organization?
+                        Are you doing something novel and interesting with our software?
+                        We’d love to add your story to the Dreamfactory.com user showcase!
+                        E-mail us at <b>info@dreamfactory.com</b> with your project details and we’ll add your organization name, URL, and story to our site!
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
     <div class="row">
