--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -22,7 +22,7 @@
             <div class="bdivider"></div>
 
             <div class="row">
-                <div class="second-banner-container col-md-12 col-lg-10 col-lg-offset-1">
+                <div class="second-banner-container col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
                     <h3>Welcome to DreamFactory!</h3>
 
                     <p>DreamFactory provides all of the backend services that you need to build great mobile, web, and IoT applications. Follow the links below to get started:</p>
