--- a/app/styles/sass/partials/_df-top-level-nav-std.scss
+++ b/app/styles/sass/partials/_df-top-level-nav-std.scss
@@ -7,7 +7,10 @@
 
   .navbar-brand {
 
-    padding-left: 15px!important;
+    @media (max-width: $screen-xs-max) {
+      padding-left: 15px!important;
+    }
+
     padding-top: 4px;
   }
 
