--- a/app/admin_components/adf-home/views/download.html
+++ b/app/admin_components/adf-home/views/download.html
@@ -1,84 +1,60 @@
-<div class="container-fluid">
-    <div style="margin-top:20px;" class="row">
+<div class="container-fluid" style="padding-left: 10px">
+    <div class="row">
+        <div class="col-xs-12 col-sm-7 col-md-6" style="margin-bottom: 50px">
+            <h3 style="font-size: 16px;color: #2e2ea3;font-weight: bold;margin-top: 22px;">DreamFactory Downloads</h3>
+            <p style="font-size: 16px;line-height: 1.75;color: #1d3d56;">DreamFactory is an open source software package available under the Apache License. The source code is free to download, use, and share. You can install DreamFactory in a number of ways: using a cloud service, a local install, or on any Linux or Windows server. The links below provide access to downloads for your preferred platform.</p>
+        </div>
+
+
+        <div class="col-sm-12" style="margin-bottom: 20px">
+            <h4 style="color: #1d3d56;font-size: 16px;font-weight: normal;">Cloud Installers</h4>
+        </div>
+
+
+        <div class="col-sm-12 example-item-container" data-ng-init="javascriptExamples = [
+            {name: 'Oracle Cloud', url: 'https://bitnami.com/stack/dreamfactory/cloud/oracle',       icon: '/images/downloads/oraclecloud.png'},
+            {name: 'Bitnami',      url: 'https://bitnami.com/stack/dreamfactory/cloud',              icon: '/images/downloads/new_little-bitnami.png'},
+            {name: 'Docker',       url: 'https://hub.docker.com/r/dreamfactorysoftware/df-docker/',  icon: '/images/downloads/new_little-docker.png'},
+            {name: 'Amazon',       url: 'https://bitnami.com/stack/dreamfactory/cloud/aws',          icon: '/images/downloads/new_little-amazon.png'},
+            {name: 'Azure',        url: 'https://bitnami.com/stack/dreamfactory/cloud/azure',        icon: '/images/downloads/new_little-azure.png'},
+            {name: 'Google',       url: 'https://bitnami.com/stack/dreamfactory/cloud/google',       icon: '/images/downloads/new_little-google.png'},
+            {name: 'VMware',       url: 'https://bitnami.com/stack/dreamfactory/virtual-machine',    icon: '/images/downloads/new_little-vmware.png'}
+        ]">
+
+                <div class="text-center" style="display: inline-block; padding-left: 0px;padding-right: 30px;" data-ng-repeat="example in javascriptExamples">
+                    <a href="{{example.url}}" target="_blank">
+                        <div class="banner outligned example-item">
+                            <img src="{{example.icon}}" alt="{{example.name}}">
+                        </div>
+                        <div class="text-center example-item-name" style="width: 100%;">
+                            {{example.name}}
+                        </div>
+                    </a>
+                </div>
+
+        </div>
+
         <div class="col-sm-12">
-            <h3 style="margin-top:0;">DreamFactory Downloads</h3>
-            <p>DreamFactory is an open source software package available under the Apache License. The source code is free to download, use, and share. You can install DreamFactory in a number of ways: using a cloud service, a local install, or on any Linux or Windows server. The links below provide access to downloads for your preferred platform.</p>
+            <h4 style="color: #1d3d56;font-size: 16px;font-weight: normal;">Local Installers</h4>
         </div>
-    </div>
-    <div class="row">
-        <hr class="content-divider">
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h4>Cloud Installers</h4>
+
+        <div class="col-xs-12 col-sm-12 col-md-10 example-item-container" style="padding-left: 0px" data-ng-init="localExamples = [
+            {name: 'Linux',         url: 'https://bitnami.com/stack/dreamfactory/installer#linux',       icon: '/images/downloads/linux-64x64.png'},
+            {name: 'OS X',          url: 'https://bitnami.com/stack/dreamfactory/installer#osx',              icon: '/images/downloads/apple-64x64v2.png'},
+            {name: 'Windows',       url: 'https://bitnami.com/stack/dreamfactory/installer#windows',  icon: '/images/downloads/microsoft-64x64.png'},
+            {name: 'GitHub Source', url: 'https://github.com/dreamfactorysoftware/dreamfactory',          icon: '/images/downloads/new_little-github.png'}
+
+        ]">
+            <div class="col-xs-6 col-sm-3 col-md-1 text-center" style="margin-right: 30px" data-ng-repeat="example in localExamples">
+                <a href="{{example.url}}" target="_blank">
+                    <div class="banner outligned example-item">
+                        <img src="{{example.icon}}" alt="{{example.name}}">
+                    </div>
+                    <div class="text-center example-item-name" style="width: calc(100% + 60px);">
+                        {{example.name}}
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/cloud/oracle" data-label="Oracle Cloud" target="_blank">
-                <img src="/images/downloads/oraclecloud.png" alt="Oracle Cloud"><br>Oracle Cloud
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/cloud" data-label="Bitnami" target="_blank">
-                <img src="/images/downloads/new_little-bitnami.png" alt="Bitnami Cloud Hosting"><br>Bitnami
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://hub.docker.com/r/dreamfactorysoftware/df-docker/" data-label="Docker" target="_blank">
-                <img src="/images/downloads/new_little-docker.png" alt="Docker"><br>Docker
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/cloud/aws" data-label="Amazon" target="_blank">
-                <img src="/images/downloads/new_little-amazon.png" alt="Amazon Web Services"><br>Amazon
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/cloud/azure" data-label="Azure" target="_blank">
-                <img src="/images/downloads/new_little-azure.png" alt="Microsoft Azure"><br>Azure
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/cloud/google" data-label="Google Cloud" target="_blank">
-                <img src="/images/downloads/new_little-google.png" alt="Google Cloud Platform"><br>Google
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/virtual-machine" data-label="VMWare" target="_blank">
-                <img src="/images/downloads/new_little-vmware.png" alt="VMware Installer"><br>VMware
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <hr class="content-divider">
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h4>Local Installers</h4>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/installer#linux" data-label="Linux" target="_blank">
-                <img src="/images/downloads/linux-64x64.png" alt="Linux" title="Linux"><br>Linux
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/installer#osx" data-label="OS X" target="_blank">
-                <img src="/images/downloads/apple-64x64v2.png" alt="OS X" title="OS X"><br>OS X
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://bitnami.com/stack/dreamfactory/installer#windows" data-label="Windows" target="_blank">
-                <img src="/images/downloads/microsoft-64x64.png" alt="Microsoft Windows" title="Wiindows"><br>Windows
-            </a>
-        </div>
-        <div class="col-sm-2 text-center">
-            <a class="inline-block-anchor text-center" href="https://github.com/dreamfactorysoftware/dreamfactory" data-label="Github" target="_blank">
-                <img src="/images/downloads/new_little-github.png" alt="GitHub Repo"><br>GitHub Source
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <hr class="content-divider">
     </div>
 </div>
