--- a/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
@@ -40,7 +40,14 @@
     }
 
     .nav-pills {
+      > li:first-child {
+        padding-left: 13px;
+        padding-right: 13px;
+      }
+
       > li {
+
+
         a {
           color: #7490a9;
           margin: 10px auto;
