Fix images paths

--- a/app/admin_components/adf-home/views/quickstart.html
+++ b/app/admin_components/adf-home/views/quickstart.html
@@ -32,7 +32,7 @@
                         <div class="col-xs-6 col-sm-3 col-md-3 text-center" data-ng-repeat="example in nativeExamples">
                             <a href="{{example.url}}" target="_blank">
                                 <div class="banner outligned example-item">
-                                    <img src="/images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                    <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
                                 </div>
                                 <div class="text-center example-item-name">
                                     {{example.name}}
@@ -61,7 +61,7 @@
                         <div class="col-xs-6 col-sm-3 col-md-2 text-center" data-ng-repeat="example in javascriptExamples">
                             <a href="{{example.url}}" target="_blank">
                                 <div class="banner outligned example-item">
-                                    <img src="/images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                    <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
                                 </div>
                                 <div class="text-center example-item-name">
                                     {{example.name}}
