--- a/app/admin_components/adf-home/views/welcome.html
+++ b/app/admin_components/adf-home/views/welcome.html
@@ -14,7 +14,7 @@
                                 <div>Watch Video</div>
                             </div>
                         </a>
-                        <img src="/images/macbook-hp-df-1.png">
+                        <img src="images/macbook-hp-df-1.png">
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                         <div class="col-xs-6 col-sm-3 col-md-3 text-center" data-ng-repeat="example in nativeExamples">
                             <a href="{{example.url}}" target="_blank">
                                 <div class="banner outligned example-item">
-                                    <img src="/images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                    <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
                                 </div>
                                 <div class="text-center example-item-name">
                                     {{example.name}}
@@ -138,7 +138,7 @@
                         <div class="col-xs-6 col-sm-3 col-md-2 text-center" data-ng-repeat="example in javascriptExamples">
                             <a href="{{example.url}}" target="_blank">
                                 <div class="banner outligned example-item">
-                                    <img src="/images/in-product/{{example.icon}}" alt="{{example.name}}">
+                                    <img src="images/in-product/{{example.icon}}" alt="{{example.name}}">
                                 </div>
                                 <div class="text-center example-item-name">
                                     {{example.name}}
